Enhance user registration to support role assignment and update JWT token claims